Working on Projectile Parry Fix

--- a/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -110,29 +110,30 @@ LastLevel=/Game/Maps/TempleBlockOut
 [AssetEditorManager]
 CleanShutdown=True
 OpenAssetsAtExit=/Game/Blueprints/CharacterBP/bp_baseCharacter.bp_baseCharacter
-OpenAssetsAtExit=/Game/Blueprints/enums/Attack_Active.Attack_Active
+OpenAssetsAtExit=/Game/Blueprints/Projectiles/BP_playerProjectile.BP_playerProjectile
+OpenAssetsAtExit=/Game/Blueprints/Projectiles/BP_fistProjectile.BP_fistProjectile
 
 [ContentBrowserRecent]
-MRUItem0=/Game/Blueprints/CharacterBP/bp_baseCharacter
-MRUItem1=/Game/Blueprints/enums/Attack_Active
-MRUItem2=/Game/Blueprints/AI/bp_fistAI_02
-MRUItem3=/Game/Anims/Player/mon_player_blockedAnimation
-MRUItem4=/Game/sfx/Disco_Inferno
-MRUItem5=/Game/Materials/NewMaterial
-MRUItem6=/Game/Blueprints/AI/bp_fistAI
-MRUItem7=/Game/Blueprints/CharacterBP/bp_fistCharacter
-MRUItem8=/Game/Blueprints/bp_PitTrigger
-MRUItem9=/Game/Blueprints/MetricListener/Listener
-MRUItem10=/Game/Blueprints/Data/Data_Fists_hitValues
-MRUItem11=/Game/Blueprints/Data/Data_Staff_hitValues
-MRUItem12=/Game/Anims/FIst/mon_fighter_G_lATK01
-MRUItem13=/Game/Blueprints/AnimationBP/ABP_FighterCharacter
-MRUItem14=/Game/Blueprints/enums/enum_AiState
-MRUItem15=/Game/Blueprints/AnimationBP/ABP_PlayerCharacter
-MRUItem16=/Game/Blueprints/AnimationBP/basePlayer_abp
-MRUItem17=/Game/Anims/Player/mon_player_finisher
-MRUItem18=/Game/Blueprints/Instance/gameInfo_instance
-MRUItem19=/Game/Mesh/m_Walls_sencondary
+MRUItem0=/Game/Blueprints/Projectiles/BP_fistProjectile
+MRUItem1=/Game/Blueprints/Projectiles/BP_playerProjectile
+MRUItem2=/Game/Blueprints/CharacterBP/bp_baseCharacter
+MRUItem3=/Game/Blueprints/enums/Attack_Active
+MRUItem4=/Game/Blueprints/AI/bp_fistAI_02
+MRUItem5=/Game/Anims/Player/mon_player_blockedAnimation
+MRUItem6=/Game/sfx/Disco_Inferno
+MRUItem7=/Game/Materials/NewMaterial
+MRUItem8=/Game/Blueprints/AI/bp_fistAI
+MRUItem9=/Game/Blueprints/CharacterBP/bp_fistCharacter
+MRUItem10=/Game/Blueprints/bp_PitTrigger
+MRUItem11=/Game/Blueprints/MetricListener/Listener
+MRUItem12=/Game/Blueprints/Data/Data_Fists_hitValues
+MRUItem13=/Game/Blueprints/Data/Data_Staff_hitValues
+MRUItem14=/Game/Anims/FIst/mon_fighter_G_lATK01
+MRUItem15=/Game/Blueprints/AnimationBP/ABP_FighterCharacter
+MRUItem16=/Game/Blueprints/enums/enum_AiState
+MRUItem17=/Game/Blueprints/AnimationBP/ABP_PlayerCharacter
+MRUItem18=/Game/Blueprints/AnimationBP/basePlayer_abp
+MRUItem19=/Game/Anims/Player/mon_player_finisher
 
 [DetailCategories]
 CryptoKeysSettings.Encryption=True
@@ -1578,11 +1579,43 @@ CapsuleComponent.Tags=True
 CapsuleComponent.ComponentReplication=True
 CapsuleComponent.Cooking=True
 CapsuleComponent.Events=True
+BP_playerProjectile_C.Tick=True
+BP_playerProjectile_C.Default=True
+BP_playerProjectile_C.Rendering=True
+BP_playerProjectile_C.Replication=True
+BP_playerProjectile_C.Input=True
+BP_playerProjectile_C.Actor=True
+BP_fistProjectile_C.Tick=True
+BP_fistProjectile_C.Default=True
+BP_fistProjectile_C.Rendering=True
+BP_fistProjectile_C.Replication=True
+BP_fistProjectile_C.Input=True
+BP_fistProjectile_C.Actor=True
+Blueprint.ClassOptions=True
+Blueprint.BlueprintOptions=True
+Blueprint.Interfaces=True
+Blueprint.Packaging=True
+Blueprint.Thumbnail=True
+ParticleSystemComponent.Variable=True
+ParticleSystemComponent.TransformCommon=True
+ParticleSystemComponent.Sockets=True
+ParticleSystemComponent.Particles=True
+ParticleSystemComponent.EmitterActions=True
+ParticleSystemComponent.Materials=True
+ParticleSystemComponent.Attachment=True
+ParticleSystemComponent.Lighting=True
+ParticleSystemComponent.Rendering=True
+ParticleSystemComponent.LOD=True
+ParticleSystemComponent.Tags=True
+ParticleSystemComponent.ComponentReplication=True
+ParticleSystemComponent.Activation=True
+ParticleSystemComponent.Cooking=True
+ParticleSystemComponent.Events=True
 
 [RootWindow]
 ScreenPosition=X=626.000 Y=0.000
 WindowSize=X=1280.000 Y=720.000
-InitiallyMaximized=True
+InitiallyMaximized=False
 
 [SlateAdditionalLayoutConfig]
 Viewport 1.LayoutType=FourPanes2x2
@@ -1608,7 +1641,7 @@ ContentBrowserTab1.ActiveTypeFilters=
 ContentBrowserTab1.EnabledTypeFilters=
 ContentBrowserTab1.ActiveFrontendFilters=
 ContentBrowserTab1.EnabledFrontendFilters=
-ContentBrowserTab1.SelectedPaths=/Game/Blueprints/CharacterBP
+ContentBrowserTab1.SelectedPaths=/Game/Blueprints
 ContentBrowserTab1.Favorites.SelectedPaths=
 FavoritePaths=
 ContentBrowserTab1.CollectionsExpanded=True
@@ -2430,6 +2463,8 @@ Character=K2Node_VariableGet.DefaultValueCategory.None,bp_baseCharacter_C.Physic
 bp_fistAI_02_C=K2Node_VariableGet.DefaultValueCategory.None,bp_baseCharacter_C.Physics.ConstraintsGroup,bp_baseCharacter_C.Rendering.TextureStreaming,bp_baseCharacter_C.Rendering.LOD,ArrayProperty.DefaultValueCategory.None,
 FloatProperty=K2Node_VariableGet.DefaultValueCategory.None,bp_baseCharacter_C.Physics.ConstraintsGroup,bp_baseCharacter_C.Rendering.TextureStreaming,bp_baseCharacter_C.Rendering.LOD,ArrayProperty.DefaultValueCategory.None,
 bp_PitTrigger_C=K2Node_VariableGet.DefaultValueCategory.None,bp_baseCharacter_C.Physics.ConstraintsGroup,bp_baseCharacter_C.Rendering.TextureStreaming,bp_baseCharacter_C.Rendering.LOD,ArrayProperty.DefaultValueCategory.None,
+SphereComponent=SphereComponent.Collision.Collision,
+StaticMeshComponent=StaticMeshComponent.Collision.Collision,
 
 [AssetEditorToolkitTabLocation]
 /Game/Blueprints/CharacterBP/bp_baseCharacter.bp_baseCharacter=1
@@ -2495,10 +2530,10 @@ LastLogListing=PIE
 [DetailPropertyExpansion]
 PreviewMeshCollection="\"Object.SkeletalMeshes\" \"Object.SkeletalMeshes\" "
 DataAsset="\"Object.SkeletalMeshes\" \"Object.SkeletalMeshes\" "
-Object=
-bp_baseCharacter_C="\"Object.hitbox_active\" \"Object.hitbox_active\" "
-Character="\"Object.hitbox_active\" \"Object.hitbox_active\" "
-Pawn="\"Object.hitbox_active\" \"Object.hitbox_active\" "
+Object="\"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[8]\" "
+bp_baseCharacter_C=
+Character=
+Pawn=
 Enemy_BP_C="\"Object.Enemy\" \"Object.Enemy\" "
 BasePlayer_BP_C="\"Object.Character\" \"Object.Character\" "
 ProjectPackagingSettings="\"Object.Packaging.MapsToCook\" "
@@ -2579,8 +2614,8 @@ ParticleModuleColorBase="\"Object.Color.ColorOverLife\" \"Object.Color.ColorOver
 ParticleModuleOrbit="\"Object.Offset.OffsetAmount\" \"Object.Offset.OffsetAmount.Distribution\" \"Object.Offset.OffsetOptions\" \"Object.Rotation.RotationAmount.Distribution\" \"Object.RotationRate.RotationRateAmount.Distribution\" "
 ParticleModuleOrbitBase="\"Object.Offset.OffsetAmount\" \"Object.Offset.OffsetAmount.Distribution\" \"Object.Offset.OffsetOptions\" \"Object.Rotation.RotationAmount.Distribution\" \"Object.RotationRate.RotationRateAmount.Distribution\" "
 CameraComponent=
-SceneComponent=
-ActorComponent=
+SceneComponent="\"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[8]\" "
+ActorComponent="\"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[8]\" "
 ParticleModuleRotation="\"Object.Rotation.StartRotation\" \"Object.Rotation.StartRotation.Distribution\" "
 ParticleModuleRotationBase="\"Object.Rotation.StartRotation\" \"Object.Rotation.StartRotation.Distribution\" "
 ParticleModuleRequired=
@@ -2616,6 +2651,11 @@ REINST_bp_fistCharacter_C_838="\"Object.Character\" \"Object.Character.Mesh.Obje
 bp_PitTrigger_C=
 TriggerBox=
 TriggerBase=
+StaticMeshComponent="\"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[8]\" "
+MeshComponent="\"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[8]\" "
+PrimitiveComponent="\"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[8]\" "
+SphereComponent="\"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[8]\" "
+ShapeComponent="\"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[8]\" "
 
 [/Script/PinnedCommandList.PinnedCommandListSettings]
 Contexts=(Name="AnimationEditor",Commands=)
