--- a/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -109,31 +109,32 @@ LastLevel=/Game/Maps/TempleBlockOut
 
 [AssetEditorManager]
 CleanShutdown=True
-OpenAssetsAtExit=/Game/Blueprints/CharacterBP/bp_baseCharacter.bp_baseCharacter
 OpenAssetsAtExit=/Game/Blueprints/Projectiles/BP_playerProjectile.BP_playerProjectile
-OpenAssetsAtExit=/Game/Blueprints/Projectiles/BP_fistProjectile.BP_fistProjectile
+OpenAssetsAtExit=/Game/Particles/p_blast.p_blast
+OpenAssetsAtExit=/Game/Blueprints/CharacterBP/bp_baseCharacter.bp_baseCharacter
+OpenAssetsAtExit=/Game/Blueprints/AI/bp_fistAI_02.bp_fistAI_02
 
 [ContentBrowserRecent]
-MRUItem0=/Game/Blueprints/Projectiles/BP_fistProjectile
-MRUItem1=/Game/Blueprints/Projectiles/BP_playerProjectile
-MRUItem2=/Game/Blueprints/CharacterBP/bp_baseCharacter
-MRUItem3=/Game/Blueprints/enums/Attack_Active
-MRUItem4=/Game/Blueprints/AI/bp_fistAI_02
-MRUItem5=/Game/Anims/Player/mon_player_blockedAnimation
-MRUItem6=/Game/sfx/Disco_Inferno
-MRUItem7=/Game/Materials/NewMaterial
-MRUItem8=/Game/Blueprints/AI/bp_fistAI
-MRUItem9=/Game/Blueprints/CharacterBP/bp_fistCharacter
-MRUItem10=/Game/Blueprints/bp_PitTrigger
-MRUItem11=/Game/Blueprints/MetricListener/Listener
-MRUItem12=/Game/Blueprints/Data/Data_Fists_hitValues
-MRUItem13=/Game/Blueprints/Data/Data_Staff_hitValues
-MRUItem14=/Game/Anims/FIst/mon_fighter_G_lATK01
-MRUItem15=/Game/Blueprints/AnimationBP/ABP_FighterCharacter
-MRUItem16=/Game/Blueprints/enums/enum_AiState
-MRUItem17=/Game/Blueprints/AnimationBP/ABP_PlayerCharacter
-MRUItem18=/Game/Blueprints/AnimationBP/basePlayer_abp
-MRUItem19=/Game/Anims/Player/mon_player_finisher
+MRUItem0=/Game/Blueprints/CharacterBP/bp_baseCharacter
+MRUItem1=/Game/Blueprints/AI/bp_fistAI_02
+MRUItem2=/Game/Blueprints/AI/bp_fistAI
+MRUItem3=/Game/Particles/p_blast
+MRUItem4=/Game/Blueprints/Projectiles/BP_playerProjectile
+MRUItem5=/Game/Materials/Mat_Cloud
+MRUItem6=/Game/Blueprints/Projectiles/BP_fistProjectile
+MRUItem7=/Game/Blueprints/enums/Attack_Active
+MRUItem8=/Game/Anims/Player/mon_player_blockedAnimation
+MRUItem9=/Game/sfx/Disco_Inferno
+MRUItem10=/Game/Materials/NewMaterial
+MRUItem11=/Game/Blueprints/CharacterBP/bp_fistCharacter
+MRUItem12=/Game/Blueprints/bp_PitTrigger
+MRUItem13=/Game/Blueprints/MetricListener/Listener
+MRUItem14=/Game/Blueprints/Data/Data_Fists_hitValues
+MRUItem15=/Game/Blueprints/Data/Data_Staff_hitValues
+MRUItem16=/Game/Anims/FIst/mon_fighter_G_lATK01
+MRUItem17=/Game/Blueprints/AnimationBP/ABP_FighterCharacter
+MRUItem18=/Game/Blueprints/enums/enum_AiState
+MRUItem19=/Game/Blueprints/AnimationBP/ABP_PlayerCharacter
 
 [DetailCategories]
 CryptoKeysSettings.Encryption=True
@@ -1611,11 +1612,39 @@ ParticleSystemComponent.ComponentReplication=True
 ParticleSystemComponent.Activation=True
 ParticleSystemComponent.Cooking=True
 ParticleSystemComponent.Events=True
+MaterialExpressionTime.MaterialExpressionTime=True
+MaterialExpressionTime.MaterialExpression=True
+MaterialExpressionCameraPositionWS.MaterialExpression=True
+MaterialExpressionWorldPosition.UMaterialExpressionWorldPosition=True
+MaterialExpressionWorldPosition.MaterialExpression=True
+MaterialExpressionDistance.MaterialExpression=True
+MaterialExpressionDivide.MaterialExpressionDivide=True
+MaterialExpressionDivide.MaterialExpression=True
+MaterialExpressionSubtract.MaterialExpressionSubtract=True
+MaterialExpressionSubtract.MaterialExpression=True
+MaterialExpressionClamp.MaterialExpressionClamp=True
+MaterialExpressionClamp.MaterialExpression=True
+MaterialExpressionSceneColor.MaterialExpressionSceneColor=True
+MaterialExpressionSceneColor.MaterialExpression=True
+MaterialExpressionLinearInterpolate.MaterialExpressionLinearInterpolate=True
+MaterialExpressionLinearInterpolate.MaterialExpression=True
+MaterialExpressionTextureSampleParameter2D.General=True
+MaterialExpressionTextureSampleParameter2D.MaterialExpressionTextureSample=True
+MaterialExpressionTextureSampleParameter2D.MaterialExpressionTextureBase=True
+MaterialExpressionTextureSampleParameter2D.MaterialExpression=True
+MaterialExpressionTextureObject.MaterialExpressionTextureBase=True
+MaterialExpressionTextureObject.MaterialExpression=True
+MaterialExpressionTextureObjectParameter.General=True
+MaterialExpressionTextureObjectParameter.MaterialExpressionTextureBase=True
+MaterialExpressionTextureObjectParameter.MaterialExpression=True
+MaterialExpressionReroute.MaterialExpression=True
+MaterialExpressionConstant2Vector.MaterialExpressionConstant2Vector=True
+MaterialExpressionConstant2Vector.MaterialExpression=True
 
 [RootWindow]
-ScreenPosition=X=626.000 Y=0.000
-WindowSize=X=1280.000 Y=720.000
-InitiallyMaximized=False
+ScreenPosition=X=73.000 Y=154.000
+WindowSize=X=718.000 Y=720.000
+InitiallyMaximized=True
 
 [SlateAdditionalLayoutConfig]
 Viewport 1.LayoutType=FourPanes2x2
@@ -1641,7 +1670,7 @@ ContentBrowserTab1.ActiveTypeFilters=
 ContentBrowserTab1.EnabledTypeFilters=
 ContentBrowserTab1.ActiveFrontendFilters=
 ContentBrowserTab1.EnabledFrontendFilters=
-ContentBrowserTab1.SelectedPaths=/Game/Blueprints
+ContentBrowserTab1.SelectedPaths=/Game/Blueprints/CharacterBP
 ContentBrowserTab1.Favorites.SelectedPaths=
 FavoritePaths=
 ContentBrowserTab1.CollectionsExpanded=True
@@ -2465,6 +2494,7 @@ FloatProperty=K2Node_VariableGet.DefaultValueCategory.None,bp_baseCharacter_C.Ph
 bp_PitTrigger_C=K2Node_VariableGet.DefaultValueCategory.None,bp_baseCharacter_C.Physics.ConstraintsGroup,bp_baseCharacter_C.Rendering.TextureStreaming,bp_baseCharacter_C.Rendering.LOD,ArrayProperty.DefaultValueCategory.None,
 SphereComponent=SphereComponent.Collision.Collision,
 StaticMeshComponent=StaticMeshComponent.Collision.Collision,
+BP_playerProjectile_C=K2Node_VariableGet.DefaultValueCategory.None,bp_baseCharacter_C.Physics.ConstraintsGroup,bp_baseCharacter_C.Rendering.TextureStreaming,bp_baseCharacter_C.Rendering.LOD,ArrayProperty.DefaultValueCategory.None,
 
 [AssetEditorToolkitTabLocation]
 /Game/Blueprints/CharacterBP/bp_baseCharacter.bp_baseCharacter=1
@@ -2523,6 +2553,7 @@ StaticMeshComponent=StaticMeshComponent.Collision.Collision,
 /Game/Anims/FIst/mon_Fighter_G_lATK02.mon_Fighter_G_lATK02=1
 /Game/Blueprints/CharacterBP/bp_fistCharacter.bp_fistCharacter=1
 /Game/Anims/Player/mon_player_blockedAnimation.mon_player_blockedAnimation=1
+/Game/Materials/Mat_Cloud.Mat_Cloud=1
 
 [MessageLog]
 LastLogListing=PIE
@@ -2530,10 +2561,10 @@ LastLogListing=PIE
 [DetailPropertyExpansion]
 PreviewMeshCollection="\"Object.SkeletalMeshes\" \"Object.SkeletalMeshes\" "
 DataAsset="\"Object.SkeletalMeshes\" \"Object.SkeletalMeshes\" "
-Object="\"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[8]\" "
-bp_baseCharacter_C=
-Character=
-Pawn=
+Object=
+bp_baseCharacter_C="\"Object.ANimation.DashAnimations\" \"Object.ANimation.lATK_G_Animations\" \"Object.ANimation.lATK_A_Animations\" \"Object.ANimation.hATK_G_Animations\" \"Object.ANimation.hATK_A_Animations\" \"Object.Inputs.Actions\" \"Object.Character\" \"Object.Character.Mesh.Object.Rendering.OverrideMaterials\" \"Object.Character.Mesh.Object.Lighting.LightingChannels\" \"Object.Character.Mesh.Object.Collision.BodyInstance\" \"Object.Character.Mesh.Object.Collision.BodyInstance.WalkableSlopeOverride\" \"Object.Character.CharacterMovement.Object.Character Movement: Walking.CurrentFloor\" \"Object.Character.CharacterMovement.Object.Character Movement (Rotation Settings).RotationRate\" \"Object.Character.CharacterMovement.Object.NavMovement.NavAgentProps\" \"Object.Character.CapsuleComponent.Object.Shape.ShapeColor\" \"Object.Character.CapsuleComponent.Object.Collision.BodyInstance\" \"Object.Character.CapsuleComponent.Object.Collision.BodyInstance.WalkableSlopeOverride\" \"Object.Input\" "
+Character="\"Object.ANimation.DashAnimations\" \"Object.ANimation.lATK_G_Animations\" \"Object.ANimation.lATK_A_Animations\" \"Object.ANimation.hATK_G_Animations\" \"Object.ANimation.hATK_A_Animations\" \"Object.Inputs.Actions\" \"Object.Character\" \"Object.Character.Mesh.Object.Rendering.OverrideMaterials\" \"Object.Character.Mesh.Object.Lighting.LightingChannels\" \"Object.Character.Mesh.Object.Collision.BodyInstance\" \"Object.Character.Mesh.Object.Collision.BodyInstance.WalkableSlopeOverride\" \"Object.Character.CharacterMovement.Object.Character Movement: Walking.CurrentFloor\" \"Object.Character.CharacterMovement.Object.Character Movement (Rotation Settings).RotationRate\" \"Object.Character.CharacterMovement.Object.NavMovement.NavAgentProps\" \"Object.Character.CapsuleComponent.Object.Shape.ShapeColor\" \"Object.Character.CapsuleComponent.Object.Collision.BodyInstance\" \"Object.Character.CapsuleComponent.Object.Collision.BodyInstance.WalkableSlopeOverride\" \"Object.Input\" "
+Pawn="\"Object.ANimation.DashAnimations\" \"Object.ANimation.lATK_G_Animations\" \"Object.ANimation.lATK_A_Animations\" \"Object.ANimation.hATK_G_Animations\" \"Object.ANimation.hATK_A_Animations\" \"Object.Inputs.Actions\" \"Object.Character\" \"Object.Character.Mesh.Object.Rendering.OverrideMaterials\" \"Object.Character.Mesh.Object.Lighting.LightingChannels\" \"Object.Character.Mesh.Object.Collision.BodyInstance\" \"Object.Character.Mesh.Object.Collision.BodyInstance.WalkableSlopeOverride\" \"Object.Character.CharacterMovement.Object.Character Movement: Walking.CurrentFloor\" \"Object.Character.CharacterMovement.Object.Character Movement (Rotation Settings).RotationRate\" \"Object.Character.CharacterMovement.Object.NavMovement.NavAgentProps\" \"Object.Character.CapsuleComponent.Object.Shape.ShapeColor\" \"Object.Character.CapsuleComponent.Object.Collision.BodyInstance\" \"Object.Character.CapsuleComponent.Object.Collision.BodyInstance.WalkableSlopeOverride\" \"Object.Input\" "
 Enemy_BP_C="\"Object.Enemy\" \"Object.Enemy\" "
 BasePlayer_BP_C="\"Object.Character\" \"Object.Character\" "
 ProjectPackagingSettings="\"Object.Packaging.MapsToCook\" "
@@ -2559,8 +2590,8 @@ IOSRuntimeSettings="\"Object.Audio.CompressionOverrides\" "
 LuminRuntimeSettings="\"Object.Advanced MPK Packaging.AppPrivileges\" "
 LevelSequenceEditorSettings="\"Object.Tracks.TrackSettings\" \"Object.Tracks.TrackSettings.TrackSettings[0]\" \"Object.Tracks.TrackSettings.TrackSettings[0].DefaultTracks\" \"Object.Tracks.TrackSettings.TrackSettings[1]\" \"Object.Tracks.TrackSettings.TrackSettings[1].DefaultTracks\" \"Object.Tracks.TrackSettings.TrackSettings[2]\" \"Object.Tracks.TrackSettings.TrackSettings[2].DefaultTracks\" \"Object.Tracks.TrackSettings.TrackSettings[2].DefaultPropertyTracks\" \"Object.Tracks.TrackSettings.TrackSettings[2].DefaultPropertyTracks.DefaultPropertyTracks[0]\" \"Object.Tracks.TrackSettings.TrackSettings[3]\" \"Object.Tracks.TrackSettings.TrackSettings[3].DefaultPropertyTracks\" \"Object.Tracks.TrackSettings.TrackSettings[3].DefaultPropertyTracks.DefaultPropertyTracks[0]\" \"Object.Tracks.TrackSettings.TrackSettings[3].DefaultPropertyTracks.DefaultPropertyTracks[1]\" \"Object.Tracks.TrackSettings.TrackSettings[3].DefaultPropertyTracks.DefaultPropertyTracks[2]\" \"Object.Tracks.TrackSettings.TrackSettings[3].ExcludeDefaultPropertyTracks\" \"Object.Tracks.TrackSettings.TrackSettings[3].ExcludeDefaultPropertyTracks.ExcludeDefaultPropertyTracks[0]\" \"Object.Tracks.TrackSettings.TrackSettings[4]\" \"Object.Tracks.TrackSettings.TrackSettings[4].DefaultTracks\" \"Object.Tracks.TrackSettings.TrackSettings[4].DefaultPropertyTracks\" \"Object.Tracks.TrackSettings.TrackSettings[4].DefaultPropertyTracks.DefaultPropertyTracks[0]\" \"Object.Tracks.TrackSettings.TrackSettings[4].DefaultPropertyTracks.DefaultPropertyTracks[1]\" "
 bp_fistAI_C=
-AIController=
-Controller=
+AIController="\"Object.User\" \"Object.User\" "
+Controller="\"Object.User\" \"Object.User\" "
 bp_fistCharacter_C="\"Object.ANimation.DashAnimations\" \"Object.ANimation.lATK_G_Animations\" \"Object.ANimation.lATK_A_Animations\" \"Object.ANimation.hATK_G_Animations\" \"Object.ANimation.hATK_A_Animations\" \"Object.Inputs.Actions\" \"Object.Character\" \"Object.Character.Mesh.Object.Rendering.OverrideMaterials\" \"Object.Character.Mesh.Object.Lighting.LightingChannels\" \"Object.Character.Mesh.Object.Collision.BodyInstance\" \"Object.Character.Mesh.Object.Collision.BodyInstance.WalkableSlopeOverride\" \"Object.Character.CharacterMovement.Object.Character Movement: Walking.CurrentFloor\" \"Object.Character.CharacterMovement.Object.Character Movement (Rotation Settings).RotationRate\" \"Object.Character.CharacterMovement.Object.NavMovement.NavAgentProps\" \"Object.Character.CapsuleComponent.Object.Shape.ShapeColor\" \"Object.Character.CapsuleComponent.Object.Collision.BodyInstance\" \"Object.Character.CapsuleComponent.Object.Collision.BodyInstance.WalkableSlopeOverride\" \"Object.Input\" "
 REINST_bp_fistCharacter_C_540="\"Object.Character\" "
 REINST_bp_baseCharacter_C_539="\"Object.Character\" "
@@ -2644,7 +2675,7 @@ PawnMovementComponent=
 NavMovementComponent=
 MovementComponent=
 REINST_bp_fistCharacter_C_166="\"Object.ANimation.DashAnimations\" \"Object.ANimation.lATK_G_Animations\" \"Object.ANimation.lATK_A_Animations\" \"Object.ANimation.hATK_G_Animations\" \"Object.ANimation.hATK_A_Animations\" \"Object.AttackInfo.DataTableInfo\" \"Object.AttackInfo.DataTableInfo.DataTableInfo[0]\" \"Object.AttackInfo.DataTableInfo.DataTableInfo[1]\" \"Object.AttackInfo.DataTableInfo.DataTableInfo[2]\" \"Object.AttackInfo.DataTableInfo.DataTableInfo[3]\" \"Object.AttackInfo.DataTableInfo.DataTableInfo[4]\" \"Object.AttackInfo.DataTableInfo.DataTableInfo[5]\" \"Object.AttackInfo.DataTableInfo.DataTableInfo[6]\" \"Object.AttackInfo.DataTableInfo.DataTableInfo[7]\" \"Object.AttackInfo.DataTableInfo.DataTableInfo[8]\" \"Object.AttackInfo.DataTableInfo.DataTableInfo[9]\" \"Object.AttackInfo.DataTableInfo.DataTableInfo[10]\" \"Object.AttackInfo.DataTableInfo.DataTableInfo[11]\" \"Object.AttackInfo.DataTableInfo.DataTableInfo[12]\" \"Object.AttackInfo.DataTableInfo.DataTableInfo[13]\" \"Object.Default.Equiped_Projectile\" \"Object.Inputs.Actions\" \"Object.Character\" \"Object.Character.Mesh.Object.Rendering.OverrideMaterials\" \"Object.Character.Mesh.Object.Lighting.LightingChannels\" \"Object.Character.Mesh.Object.Collision.BodyInstance\" \"Object.Character.Mesh.Object.Collision.BodyInstance.WalkableSlopeOverride\" \"Object.Character.CharacterMovement.Object.Character Movement: Walking.CurrentFloor\" \"Object.Character.CharacterMovement.Object.Character Movement (Rotation Settings).RotationRate\" \"Object.Character.CharacterMovement.Object.NavMovement.NavAgentProps\" \"Object.Character.CapsuleComponent.Object.Shape.ShapeColor\" \"Object.Character.CapsuleComponent.Object.Collision.BodyInstance\" \"Object.Character.CapsuleComponent.Object.Collision.BodyInstance.WalkableSlopeOverride\" \"Object.Input\" "
-bp_fistAI_02_C=
+bp_fistAI_02_C="\"Object.User\" \"Object.User\" "
 REINST_bp_fistCharacter_C_372="\"Object.Character\" \"Object.Character.Mesh.Object.Rendering.OverrideMaterials\" \"Object.Character.Mesh.Object.Lighting.LightingChannels\" \"Object.Character.Mesh.Object.Collision.BodyInstance\" \"Object.Character.Mesh.Object.Collision.BodyInstance.WalkableSlopeOverride\" \"Object.Character.CharacterMovement.Object.Character Movement: Walking.CurrentFloor\" \"Object.Character.CharacterMovement.Object.Character Movement (Rotation Settings).RotationRate\" \"Object.Character.CharacterMovement.Object.NavMovement.NavAgentProps\" \"Object.Character.CapsuleComponent.Object.Shape.ShapeColor\" \"Object.Character.CapsuleComponent.Object.Collision.BodyInstance\" \"Object.Character.CapsuleComponent.Object.Collision.BodyInstance.WalkableSlopeOverride\" \"Object.Input\" "
 REINST_bp_baseCharacter_C_371="\"Object.Character\" \"Object.Character.Mesh.Object.Rendering.OverrideMaterials\" \"Object.Character.Mesh.Object.Lighting.LightingChannels\" \"Object.Character.Mesh.Object.Collision.BodyInstance\" \"Object.Character.Mesh.Object.Collision.BodyInstance.WalkableSlopeOverride\" \"Object.Character.CharacterMovement.Object.Character Movement: Walking.CurrentFloor\" \"Object.Character.CharacterMovement.Object.Character Movement (Rotation Settings).RotationRate\" \"Object.Character.CharacterMovement.Object.NavMovement.NavAgentProps\" \"Object.Character.CapsuleComponent.Object.Shape.ShapeColor\" \"Object.Character.CapsuleComponent.Object.Collision.BodyInstance\" \"Object.Character.CapsuleComponent.Object.Collision.BodyInstance.WalkableSlopeOverride\" \"Object.Input\" "
 REINST_bp_fistCharacter_C_838="\"Object.Character\" \"Object.Character.Mesh.Object.Rendering.OverrideMaterials\" \"Object.Character.Mesh.Object.Lighting.LightingChannels\" \"Object.Character.Mesh.Object.Collision.BodyInstance\" \"Object.Character.Mesh.Object.Collision.BodyInstance.WalkableSlopeOverride\" \"Object.Character.CharacterMovement.Object.Character Movement: Walking.CurrentFloor\" \"Object.Character.CharacterMovement.Object.Character Movement (Rotation Settings).RotationRate\" \"Object.Character.CharacterMovement.Object.NavMovement.NavAgentProps\" \"Object.Character.CapsuleComponent.Object.Shape.ShapeColor\" \"Object.Character.CapsuleComponent.Object.Collision.BodyInstance\" \"Object.Character.CapsuleComponent.Object.Collision.BodyInstance.WalkableSlopeOverride\" \"Object.Input\" "
@@ -2675,6 +2706,7 @@ StaticMeshActor.Collision=True
 EditorNotifyObject.AnimLink=True
 
 [PlacementMode]
+RecentlyPlaced=/Game/Materials/Mat_Cloud.Mat_Cloud;
 RecentlyPlaced=/Script/Engine.TriggerBox;/Engine/Transient.ActorFactoryTriggerBox_0
 RecentlyPlaced=/Game/Blueprints/MetricListener/Listener.Listener;
 RecentlyPlaced=/Game/Materials/NewMaterial.NewMaterial;
@@ -2727,7 +2759,7 @@ bMaterialQualityUsed[1]=1
 bMaterialQualityUsed[2]=0
 
 [MaterialEditor]
-PrimType=1
+PrimType=3
 
 [WidgetTemplatesExpanded]
 Extra=False
