After merge initial test.

--- a/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -109,33 +109,32 @@ LastLevel=/Game/Maps/TempleBlockOut
 
 [AssetEditorManager]
 CleanShutdown=True
-
-OpenAssetsAtExit=/Game/Blueprints/Projectiles/BP_playerProjectile.BP_playerProjectile
-OpenAssetsAtExit=/Game/Particles/p_blast.p_blast
+OpenAssetsAtExit=/Game/Blueprints/MetricListener/Listener.Listener
 OpenAssetsAtExit=/Game/Blueprints/CharacterBP/bp_baseCharacter.bp_baseCharacter
-OpenAssetsAtExit=/Game/Blueprints/AI/bp_fistAI_02.bp_fistAI_02
+OpenAssetsAtExit=/Game/Blueprints/Instance/gameInfo_instance.gameInfo_instance
+OpenAssetsAtExit=/Game/Maps/TempleBlockOut.TempleBlockOut:PersistentLevel.TempleBlockOut
 
 [ContentBrowserRecent]
-MRUItem0=/Game/Blueprints/CharacterBP/bp_baseCharacter
-MRUItem1=/Game/Blueprints/AI/bp_fistAI_02
-MRUItem2=/Game/Blueprints/AI/bp_fistAI
-MRUItem3=/Game/Particles/p_blast
-MRUItem4=/Game/Blueprints/Projectiles/BP_playerProjectile
-MRUItem5=/Game/Materials/Mat_Cloud
-MRUItem6=/Game/Blueprints/Projectiles/BP_fistProjectile
-MRUItem7=/Game/Blueprints/enums/Attack_Active
-MRUItem8=/Game/Anims/Player/mon_player_blockedAnimation
-MRUItem9=/Game/sfx/Disco_Inferno
-MRUItem10=/Game/Materials/NewMaterial
-MRUItem11=/Game/Blueprints/CharacterBP/bp_fistCharacter
-MRUItem12=/Game/Blueprints/bp_PitTrigger
-MRUItem13=/Game/Blueprints/MetricListener/Listener
-MRUItem14=/Game/Blueprints/Data/Data_Fists_hitValues
-MRUItem15=/Game/Blueprints/Data/Data_Staff_hitValues
-MRUItem16=/Game/Anims/FIst/mon_fighter_G_lATK01
-MRUItem17=/Game/Blueprints/AnimationBP/ABP_FighterCharacter
-MRUItem18=/Game/Blueprints/enums/enum_AiState
-MRUItem19=/Game/Blueprints/AnimationBP/ABP_PlayerCharacter
+MRUItem0=/Game/Blueprints/Instance/gameInfo_instance
+MRUItem1=/Game/Blueprints/CharacterBP/bp_baseCharacter
+MRUItem2=/Game/Blueprints/MetricListener/Listener
+MRUItem3=/Game/Blueprints/AI/bp_fistAI_02
+MRUItem4=/Game/Blueprints/AI/bp_fistAI
+MRUItem5=/Game/Particles/p_blast
+MRUItem6=/Game/Blueprints/Projectiles/BP_playerProjectile
+MRUItem7=/Game/Materials/Mat_Cloud
+MRUItem8=/Game/Blueprints/Projectiles/BP_fistProjectile
+MRUItem9=/Game/Blueprints/enums/Attack_Active
+MRUItem10=/Game/Anims/Player/mon_player_blockedAnimation
+MRUItem11=/Game/sfx/Disco_Inferno
+MRUItem12=/Game/Materials/NewMaterial
+MRUItem13=/Game/Blueprints/CharacterBP/bp_fistCharacter
+MRUItem14=/Game/Blueprints/bp_PitTrigger
+MRUItem15=/Game/Blueprints/Data/Data_Fists_hitValues
+MRUItem16=/Game/Blueprints/Data/Data_Staff_hitValues
+MRUItem17=/Game/Anims/FIst/mon_fighter_G_lATK01
+MRUItem18=/Game/Blueprints/AnimationBP/ABP_FighterCharacter
+MRUItem19=/Game/Blueprints/enums/enum_AiState
 
 [DetailCategories]
 CryptoKeysSettings.Encryption=True
@@ -1581,7 +1580,6 @@ CapsuleComponent.Tags=True
 CapsuleComponent.ComponentReplication=True
 CapsuleComponent.Cooking=True
 CapsuleComponent.Events=True
-
 BP_playerProjectile_C.Tick=True
 BP_playerProjectile_C.Default=True
 BP_playerProjectile_C.Rendering=True
@@ -1642,6 +1640,8 @@ MaterialExpressionTextureObjectParameter.MaterialExpression=True
 MaterialExpressionReroute.MaterialExpression=True
 MaterialExpressionConstant2Vector.MaterialExpressionConstant2Vector=True
 MaterialExpressionConstant2Vector.MaterialExpression=True
+gameInfo_instance_C.Player Metrics=True
+gameInfo_instance_C.Enemy Metrics=True
 
 [RootWindow]
 ScreenPosition=X=73.000 Y=154.000
@@ -1662,7 +1662,7 @@ FourPanes2x2.Viewport 1.bIsMaximized=True
 FourPanes2x2.Viewport 1.MaximizedViewport=FourPanes2x2.Viewport 1.Viewport1
 
 [ContentBrowser]
-ContentBrowserTab1.SourcesExpanded=True
+ContentBrowserTab1.SourcesExpanded=False
 ContentBrowserTab1.Locked=False
 ContentBrowserTab1.VerticalSplitter.SlotSize0=0.302816
 ContentBrowserTab1.VerticalSplitter.SlotSize1=0.697184
@@ -1672,7 +1672,7 @@ ContentBrowserTab1.ActiveTypeFilters=
 ContentBrowserTab1.EnabledTypeFilters=
 ContentBrowserTab1.ActiveFrontendFilters=
 ContentBrowserTab1.EnabledFrontendFilters=
-ContentBrowserTab1.SelectedPaths=/Game/Blueprints/CharacterBP
+ContentBrowserTab1.SelectedPaths=/Game/Blueprints
 ContentBrowserTab1.Favorites.SelectedPaths=
 FavoritePaths=
 ContentBrowserTab1.CollectionsExpanded=True
@@ -2567,7 +2567,6 @@ Object=
 bp_baseCharacter_C="\"Object.ANimation.DashAnimations\" \"Object.ANimation.lATK_G_Animations\" \"Object.ANimation.lATK_A_Animations\" \"Object.ANimation.hATK_G_Animations\" \"Object.ANimation.hATK_A_Animations\" \"Object.Inputs.Actions\" \"Object.Character\" \"Object.Character.Mesh.Object.Rendering.OverrideMaterials\" \"Object.Character.Mesh.Object.Lighting.LightingChannels\" \"Object.Character.Mesh.Object.Collision.BodyInstance\" \"Object.Character.Mesh.Object.Collision.BodyInstance.WalkableSlopeOverride\" \"Object.Character.CharacterMovement.Object.Character Movement: Walking.CurrentFloor\" \"Object.Character.CharacterMovement.Object.Character Movement (Rotation Settings).RotationRate\" \"Object.Character.CharacterMovement.Object.NavMovement.NavAgentProps\" \"Object.Character.CapsuleComponent.Object.Shape.ShapeColor\" \"Object.Character.CapsuleComponent.Object.Collision.BodyInstance\" \"Object.Character.CapsuleComponent.Object.Collision.BodyInstance.WalkableSlopeOverride\" \"Object.Input\" "
 Character="\"Object.ANimation.DashAnimations\" \"Object.ANimation.lATK_G_Animations\" \"Object.ANimation.lATK_A_Animations\" \"Object.ANimation.hATK_G_Animations\" \"Object.ANimation.hATK_A_Animations\" \"Object.Inputs.Actions\" \"Object.Character\" \"Object.Character.Mesh.Object.Rendering.OverrideMaterials\" \"Object.Character.Mesh.Object.Lighting.LightingChannels\" \"Object.Character.Mesh.Object.Collision.BodyInstance\" \"Object.Character.Mesh.Object.Collision.BodyInstance.WalkableSlopeOverride\" \"Object.Character.CharacterMovement.Object.Character Movement: Walking.CurrentFloor\" \"Object.Character.CharacterMovement.Object.Character Movement (Rotation Settings).RotationRate\" \"Object.Character.CharacterMovement.Object.NavMovement.NavAgentProps\" \"Object.Character.CapsuleComponent.Object.Shape.ShapeColor\" \"Object.Character.CapsuleComponent.Object.Collision.BodyInstance\" \"Object.Character.CapsuleComponent.Object.Collision.BodyInstance.WalkableSlopeOverride\" \"Object.Input\" "
 Pawn="\"Object.ANimation.DashAnimations\" \"Object.ANimation.lATK_G_Animations\" \"Object.ANimation.lATK_A_Animations\" \"Object.ANimation.hATK_G_Animations\" \"Object.ANimation.hATK_A_Animations\" \"Object.Inputs.Actions\" \"Object.Character\" \"Object.Character.Mesh.Object.Rendering.OverrideMaterials\" \"Object.Character.Mesh.Object.Lighting.LightingChannels\" \"Object.Character.Mesh.Object.Collision.BodyInstance\" \"Object.Character.Mesh.Object.Collision.BodyInstance.WalkableSlopeOverride\" \"Object.Character.CharacterMovement.Object.Character Movement: Walking.CurrentFloor\" \"Object.Character.CharacterMovement.Object.Character Movement (Rotation Settings).RotationRate\" \"Object.Character.CharacterMovement.Object.NavMovement.NavAgentProps\" \"Object.Character.CapsuleComponent.Object.Shape.ShapeColor\" \"Object.Character.CapsuleComponent.Object.Collision.BodyInstance\" \"Object.Character.CapsuleComponent.Object.Collision.BodyInstance.WalkableSlopeOverride\" \"Object.Input\" "
-
 Enemy_BP_C="\"Object.Enemy\" \"Object.Enemy\" "
 BasePlayer_BP_C="\"Object.Character\" \"Object.Character\" "
 ProjectPackagingSettings="\"Object.Packaging.MapsToCook\" "
@@ -2648,10 +2647,8 @@ ParticleModuleColorBase="\"Object.Color.ColorOverLife\" \"Object.Color.ColorOver
 ParticleModuleOrbit="\"Object.Offset.OffsetAmount\" \"Object.Offset.OffsetAmount.Distribution\" \"Object.Offset.OffsetOptions\" \"Object.Rotation.RotationAmount.Distribution\" \"Object.RotationRate.RotationRateAmount.Distribution\" "
 ParticleModuleOrbitBase="\"Object.Offset.OffsetAmount\" \"Object.Offset.OffsetAmount.Distribution\" \"Object.Offset.OffsetOptions\" \"Object.Rotation.RotationAmount.Distribution\" \"Object.RotationRate.RotationRateAmount.Distribution\" "
 CameraComponent=
-
 SceneComponent="\"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[8]\" "
 ActorComponent="\"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[8]\" "
-
 ParticleModuleRotation="\"Object.Rotation.StartRotation\" \"Object.Rotation.StartRotation.Distribution\" "
 ParticleModuleRotationBase="\"Object.Rotation.StartRotation\" \"Object.Rotation.StartRotation.Distribution\" "
 ParticleModuleRequired=
@@ -2687,13 +2684,11 @@ REINST_bp_fistCharacter_C_838="\"Object.Character\" \"Object.Character.Mesh.Obje
 bp_PitTrigger_C=
 TriggerBox=
 TriggerBase=
-
 StaticMeshComponent="\"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[8]\" "
 MeshComponent="\"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[8]\" "
 PrimitiveComponent="\"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[8]\" "
 SphereComponent="\"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[8]\" "
 ShapeComponent="\"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[8]\" "
-
 
 [/Script/PinnedCommandList.PinnedCommandListSettings]
 Contexts=(Name="AnimationEditor",Commands=)
