After merge fixes.
For some reason the initial merge left out a variable in the character BP but after finding that and doing a few test runs to iron out where some other warnings/errors were things in the output seem pretty quite and running smoothly.

--- a/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -109,26 +109,23 @@ LastLevel=/Game/Maps/TempleBlockOut
 
 [AssetEditorManager]
 CleanShutdown=True
-OpenAssetsAtExit=/Game/Blueprints/MetricListener/Listener.Listener
 OpenAssetsAtExit=/Game/Blueprints/CharacterBP/bp_baseCharacter.bp_baseCharacter
-OpenAssetsAtExit=/Game/Blueprints/Instance/gameInfo_instance.gameInfo_instance
-OpenAssetsAtExit=/Game/Maps/TempleBlockOut.TempleBlockOut:PersistentLevel.TempleBlockOut
 
 [ContentBrowserRecent]
-MRUItem0=/Game/Blueprints/Instance/gameInfo_instance
+MRUItem0=/Game/Blueprints/MetricListener/Listener
 MRUItem1=/Game/Blueprints/CharacterBP/bp_baseCharacter
-MRUItem2=/Game/Blueprints/MetricListener/Listener
+MRUItem2=/Game/Blueprints/CharacterBP/bp_fistCharacter
 MRUItem3=/Game/Blueprints/AI/bp_fistAI_02
-MRUItem4=/Game/Blueprints/AI/bp_fistAI
-MRUItem5=/Game/Particles/p_blast
-MRUItem6=/Game/Blueprints/Projectiles/BP_playerProjectile
-MRUItem7=/Game/Materials/Mat_Cloud
-MRUItem8=/Game/Blueprints/Projectiles/BP_fistProjectile
-MRUItem9=/Game/Blueprints/enums/Attack_Active
-MRUItem10=/Game/Anims/Player/mon_player_blockedAnimation
-MRUItem11=/Game/sfx/Disco_Inferno
-MRUItem12=/Game/Materials/NewMaterial
-MRUItem13=/Game/Blueprints/CharacterBP/bp_fistCharacter
+MRUItem4=/Game/Blueprints/Instance/gameInfo_instance
+MRUItem5=/Game/Blueprints/AI/bp_fistAI
+MRUItem6=/Game/Particles/p_blast
+MRUItem7=/Game/Blueprints/Projectiles/BP_playerProjectile
+MRUItem8=/Game/Materials/Mat_Cloud
+MRUItem9=/Game/Blueprints/Projectiles/BP_fistProjectile
+MRUItem10=/Game/Blueprints/enums/Attack_Active
+MRUItem11=/Game/Anims/Player/mon_player_blockedAnimation
+MRUItem12=/Game/sfx/Disco_Inferno
+MRUItem13=/Game/Materials/NewMaterial
 MRUItem14=/Game/Blueprints/bp_PitTrigger
 MRUItem15=/Game/Blueprints/Data/Data_Fists_hitValues
 MRUItem16=/Game/Blueprints/Data/Data_Staff_hitValues
@@ -341,7 +338,7 @@ WmfMediaSettings.Debug=True
 bp_baseCharacter_C.Tick=True
 bp_baseCharacter_C.states=True
 bp_baseCharacter_C.Camera=True
-bp_baseCharacter_C.Animation=True
+bp_baseCharacter_C.Animation=False
 bp_baseCharacter_C.References=True
 bp_baseCharacter_C.Particles=True
 bp_baseCharacter_C.Dash=True
@@ -521,7 +518,7 @@ PlayerStart.Rendering=True
 PlayerStart.Input=True
 PlayerStart.Actor=True
 bp_fistCharacter_C.TransformCommon=True
-bp_fistCharacter_C.animation=True
+bp_fistCharacter_C.animation=False
 bp_fistCharacter_C.Mesh=True
 bp_fistCharacter_C.states=True
 bp_fistCharacter_C.References=True
@@ -1672,7 +1669,7 @@ ContentBrowserTab1.ActiveTypeFilters=
 ContentBrowserTab1.EnabledTypeFilters=
 ContentBrowserTab1.ActiveFrontendFilters=
 ContentBrowserTab1.EnabledFrontendFilters=
-ContentBrowserTab1.SelectedPaths=/Game/Blueprints
+ContentBrowserTab1.SelectedPaths=/Game/Blueprints/CharacterBP
 ContentBrowserTab1.Favorites.SelectedPaths=
 FavoritePaths=
 ContentBrowserTab1.CollectionsExpanded=True
@@ -2564,9 +2561,9 @@ LastLogListing=PIE
 PreviewMeshCollection="\"Object.SkeletalMeshes\" \"Object.SkeletalMeshes\" "
 DataAsset="\"Object.SkeletalMeshes\" \"Object.SkeletalMeshes\" "
 Object=
-bp_baseCharacter_C="\"Object.ANimation.DashAnimations\" \"Object.ANimation.lATK_G_Animations\" \"Object.ANimation.lATK_A_Animations\" \"Object.ANimation.hATK_G_Animations\" \"Object.ANimation.hATK_A_Animations\" \"Object.Inputs.Actions\" \"Object.Character\" \"Object.Character.Mesh.Object.Rendering.OverrideMaterials\" \"Object.Character.Mesh.Object.Lighting.LightingChannels\" \"Object.Character.Mesh.Object.Collision.BodyInstance\" \"Object.Character.Mesh.Object.Collision.BodyInstance.WalkableSlopeOverride\" \"Object.Character.CharacterMovement.Object.Character Movement: Walking.CurrentFloor\" \"Object.Character.CharacterMovement.Object.Character Movement (Rotation Settings).RotationRate\" \"Object.Character.CharacterMovement.Object.NavMovement.NavAgentProps\" \"Object.Character.CapsuleComponent.Object.Shape.ShapeColor\" \"Object.Character.CapsuleComponent.Object.Collision.BodyInstance\" \"Object.Character.CapsuleComponent.Object.Collision.BodyInstance.WalkableSlopeOverride\" \"Object.Input\" "
-Character="\"Object.ANimation.DashAnimations\" \"Object.ANimation.lATK_G_Animations\" \"Object.ANimation.lATK_A_Animations\" \"Object.ANimation.hATK_G_Animations\" \"Object.ANimation.hATK_A_Animations\" \"Object.Inputs.Actions\" \"Object.Character\" \"Object.Character.Mesh.Object.Rendering.OverrideMaterials\" \"Object.Character.Mesh.Object.Lighting.LightingChannels\" \"Object.Character.Mesh.Object.Collision.BodyInstance\" \"Object.Character.Mesh.Object.Collision.BodyInstance.WalkableSlopeOverride\" \"Object.Character.CharacterMovement.Object.Character Movement: Walking.CurrentFloor\" \"Object.Character.CharacterMovement.Object.Character Movement (Rotation Settings).RotationRate\" \"Object.Character.CharacterMovement.Object.NavMovement.NavAgentProps\" \"Object.Character.CapsuleComponent.Object.Shape.ShapeColor\" \"Object.Character.CapsuleComponent.Object.Collision.BodyInstance\" \"Object.Character.CapsuleComponent.Object.Collision.BodyInstance.WalkableSlopeOverride\" \"Object.Input\" "
-Pawn="\"Object.ANimation.DashAnimations\" \"Object.ANimation.lATK_G_Animations\" \"Object.ANimation.lATK_A_Animations\" \"Object.ANimation.hATK_G_Animations\" \"Object.ANimation.hATK_A_Animations\" \"Object.Inputs.Actions\" \"Object.Character\" \"Object.Character.Mesh.Object.Rendering.OverrideMaterials\" \"Object.Character.Mesh.Object.Lighting.LightingChannels\" \"Object.Character.Mesh.Object.Collision.BodyInstance\" \"Object.Character.Mesh.Object.Collision.BodyInstance.WalkableSlopeOverride\" \"Object.Character.CharacterMovement.Object.Character Movement: Walking.CurrentFloor\" \"Object.Character.CharacterMovement.Object.Character Movement (Rotation Settings).RotationRate\" \"Object.Character.CharacterMovement.Object.NavMovement.NavAgentProps\" \"Object.Character.CapsuleComponent.Object.Shape.ShapeColor\" \"Object.Character.CapsuleComponent.Object.Collision.BodyInstance\" \"Object.Character.CapsuleComponent.Object.Collision.BodyInstance.WalkableSlopeOverride\" \"Object.Input\" "
+bp_baseCharacter_C="\"Object.ListenerRef\" \"Object.ListenerRef\" "
+Character="\"Object.ListenerRef\" \"Object.ListenerRef\" "
+Pawn="\"Object.ListenerRef\" \"Object.ListenerRef\" "
 Enemy_BP_C="\"Object.Enemy\" \"Object.Enemy\" "
 BasePlayer_BP_C="\"Object.Character\" \"Object.Character\" "
 ProjectPackagingSettings="\"Object.Packaging.MapsToCook\" "
@@ -2592,8 +2589,8 @@ IOSRuntimeSettings="\"Object.Audio.CompressionOverrides\" "
 LuminRuntimeSettings="\"Object.Advanced MPK Packaging.AppPrivileges\" "
 LevelSequenceEditorSettings="\"Object.Tracks.TrackSettings\" \"Object.Tracks.TrackSettings.TrackSettings[0]\" \"Object.Tracks.TrackSettings.TrackSettings[0].DefaultTracks\" \"Object.Tracks.TrackSettings.TrackSettings[1]\" \"Object.Tracks.TrackSettings.TrackSettings[1].DefaultTracks\" \"Object.Tracks.TrackSettings.TrackSettings[2]\" \"Object.Tracks.TrackSettings.TrackSettings[2].DefaultTracks\" \"Object.Tracks.TrackSettings.TrackSettings[2].DefaultPropertyTracks\" \"Object.Tracks.TrackSettings.TrackSettings[2].DefaultPropertyTracks.DefaultPropertyTracks[0]\" \"Object.Tracks.TrackSettings.TrackSettings[3]\" \"Object.Tracks.TrackSettings.TrackSettings[3].DefaultPropertyTracks\" \"Object.Tracks.TrackSettings.TrackSettings[3].DefaultPropertyTracks.DefaultPropertyTracks[0]\" \"Object.Tracks.TrackSettings.TrackSettings[3].DefaultPropertyTracks.DefaultPropertyTracks[1]\" \"Object.Tracks.TrackSettings.TrackSettings[3].DefaultPropertyTracks.DefaultPropertyTracks[2]\" \"Object.Tracks.TrackSettings.TrackSettings[3].ExcludeDefaultPropertyTracks\" \"Object.Tracks.TrackSettings.TrackSettings[3].ExcludeDefaultPropertyTracks.ExcludeDefaultPropertyTracks[0]\" \"Object.Tracks.TrackSettings.TrackSettings[4]\" \"Object.Tracks.TrackSettings.TrackSettings[4].DefaultTracks\" \"Object.Tracks.TrackSettings.TrackSettings[4].DefaultPropertyTracks\" \"Object.Tracks.TrackSettings.TrackSettings[4].DefaultPropertyTracks.DefaultPropertyTracks[0]\" \"Object.Tracks.TrackSettings.TrackSettings[4].DefaultPropertyTracks.DefaultPropertyTracks[1]\" "
 bp_fistAI_C=
-AIController="\"Object.User\" \"Object.User\" "
-Controller="\"Object.User\" \"Object.User\" "
+AIController=
+Controller=
 bp_fistCharacter_C="\"Object.ANimation.DashAnimations\" \"Object.ANimation.lATK_G_Animations\" \"Object.ANimation.lATK_A_Animations\" \"Object.ANimation.hATK_G_Animations\" \"Object.ANimation.hATK_A_Animations\" \"Object.Inputs.Actions\" \"Object.Character\" \"Object.Character.Mesh.Object.Rendering.OverrideMaterials\" \"Object.Character.Mesh.Object.Lighting.LightingChannels\" \"Object.Character.Mesh.Object.Collision.BodyInstance\" \"Object.Character.Mesh.Object.Collision.BodyInstance.WalkableSlopeOverride\" \"Object.Character.CharacterMovement.Object.Character Movement: Walking.CurrentFloor\" \"Object.Character.CharacterMovement.Object.Character Movement (Rotation Settings).RotationRate\" \"Object.Character.CharacterMovement.Object.NavMovement.NavAgentProps\" \"Object.Character.CapsuleComponent.Object.Shape.ShapeColor\" \"Object.Character.CapsuleComponent.Object.Collision.BodyInstance\" \"Object.Character.CapsuleComponent.Object.Collision.BodyInstance.WalkableSlopeOverride\" \"Object.Input\" "
 REINST_bp_fistCharacter_C_540="\"Object.Character\" "
 REINST_bp_baseCharacter_C_539="\"Object.Character\" "
@@ -2677,7 +2674,7 @@ PawnMovementComponent="\"Object.GravityScale\" \"Object.GravityScale\" "
 NavMovementComponent="\"Object.GravityScale\" \"Object.GravityScale\" "
 MovementComponent="\"Object.GravityScale\" \"Object.GravityScale\" "
 REINST_bp_fistCharacter_C_166="\"Object.ANimation.DashAnimations\" \"Object.ANimation.lATK_G_Animations\" \"Object.ANimation.lATK_A_Animations\" \"Object.ANimation.hATK_G_Animations\" \"Object.ANimation.hATK_A_Animations\" \"Object.AttackInfo.DataTableInfo\" \"Object.AttackInfo.DataTableInfo.DataTableInfo[0]\" \"Object.AttackInfo.DataTableInfo.DataTableInfo[1]\" \"Object.AttackInfo.DataTableInfo.DataTableInfo[2]\" \"Object.AttackInfo.DataTableInfo.DataTableInfo[3]\" \"Object.AttackInfo.DataTableInfo.DataTableInfo[4]\" \"Object.AttackInfo.DataTableInfo.DataTableInfo[5]\" \"Object.AttackInfo.DataTableInfo.DataTableInfo[6]\" \"Object.AttackInfo.DataTableInfo.DataTableInfo[7]\" \"Object.AttackInfo.DataTableInfo.DataTableInfo[8]\" \"Object.AttackInfo.DataTableInfo.DataTableInfo[9]\" \"Object.AttackInfo.DataTableInfo.DataTableInfo[10]\" \"Object.AttackInfo.DataTableInfo.DataTableInfo[11]\" \"Object.AttackInfo.DataTableInfo.DataTableInfo[12]\" \"Object.AttackInfo.DataTableInfo.DataTableInfo[13]\" \"Object.Default.Equiped_Projectile\" \"Object.Inputs.Actions\" \"Object.Character\" \"Object.Character.Mesh.Object.Rendering.OverrideMaterials\" \"Object.Character.Mesh.Object.Lighting.LightingChannels\" \"Object.Character.Mesh.Object.Collision.BodyInstance\" \"Object.Character.Mesh.Object.Collision.BodyInstance.WalkableSlopeOverride\" \"Object.Character.CharacterMovement.Object.Character Movement: Walking.CurrentFloor\" \"Object.Character.CharacterMovement.Object.Character Movement (Rotation Settings).RotationRate\" \"Object.Character.CharacterMovement.Object.NavMovement.NavAgentProps\" \"Object.Character.CapsuleComponent.Object.Shape.ShapeColor\" \"Object.Character.CapsuleComponent.Object.Collision.BodyInstance\" \"Object.Character.CapsuleComponent.Object.Collision.BodyInstance.WalkableSlopeOverride\" \"Object.Input\" "
-bp_fistAI_02_C="\"Object.User\" \"Object.User\" "
+bp_fistAI_02_C=
 REINST_bp_fistCharacter_C_372="\"Object.Character\" \"Object.Character.Mesh.Object.Rendering.OverrideMaterials\" \"Object.Character.Mesh.Object.Lighting.LightingChannels\" \"Object.Character.Mesh.Object.Collision.BodyInstance\" \"Object.Character.Mesh.Object.Collision.BodyInstance.WalkableSlopeOverride\" \"Object.Character.CharacterMovement.Object.Character Movement: Walking.CurrentFloor\" \"Object.Character.CharacterMovement.Object.Character Movement (Rotation Settings).RotationRate\" \"Object.Character.CharacterMovement.Object.NavMovement.NavAgentProps\" \"Object.Character.CapsuleComponent.Object.Shape.ShapeColor\" \"Object.Character.CapsuleComponent.Object.Collision.BodyInstance\" \"Object.Character.CapsuleComponent.Object.Collision.BodyInstance.WalkableSlopeOverride\" \"Object.Input\" "
 REINST_bp_baseCharacter_C_371="\"Object.Character\" \"Object.Character.Mesh.Object.Rendering.OverrideMaterials\" \"Object.Character.Mesh.Object.Lighting.LightingChannels\" \"Object.Character.Mesh.Object.Collision.BodyInstance\" \"Object.Character.Mesh.Object.Collision.BodyInstance.WalkableSlopeOverride\" \"Object.Character.CharacterMovement.Object.Character Movement: Walking.CurrentFloor\" \"Object.Character.CharacterMovement.Object.Character Movement (Rotation Settings).RotationRate\" \"Object.Character.CharacterMovement.Object.NavMovement.NavAgentProps\" \"Object.Character.CapsuleComponent.Object.Shape.ShapeColor\" \"Object.Character.CapsuleComponent.Object.Collision.BodyInstance\" \"Object.Character.CapsuleComponent.Object.Collision.BodyInstance.WalkableSlopeOverride\" \"Object.Input\" "
 REINST_bp_fistCharacter_C_838="\"Object.Character\" \"Object.Character.Mesh.Object.Rendering.OverrideMaterials\" \"Object.Character.Mesh.Object.Lighting.LightingChannels\" \"Object.Character.Mesh.Object.Collision.BodyInstance\" \"Object.Character.Mesh.Object.Collision.BodyInstance.WalkableSlopeOverride\" \"Object.Character.CharacterMovement.Object.Character Movement: Walking.CurrentFloor\" \"Object.Character.CharacterMovement.Object.Character Movement (Rotation Settings).RotationRate\" \"Object.Character.CharacterMovement.Object.NavMovement.NavAgentProps\" \"Object.Character.CapsuleComponent.Object.Shape.ShapeColor\" \"Object.Character.CapsuleComponent.Object.Collision.BodyInstance\" \"Object.Character.CapsuleComponent.Object.Collision.BodyInstance.WalkableSlopeOverride\" \"Object.Input\" "
